welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:1: error: not found: value n
def golomb(num:Int): Int = {return n} 
                                   ^